# poetry_package_develop

./: Dockerfile  README.md
.github/workflows/: lint_build_test.yaml
ecdemo/: Dockerfile  pyproject.toml  requirements.txt  requirements_dev.txt
workspace/: pyproject.toml  requirements_dev.txt
workspace/ecdemo/: user.py
workspace/tests/: test_ecdemo.py
