[tool.poetry]
name = "ecdemo"
version = "0.1.0"
description = ""
authors = ["nnashiki <n.nashiki.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
black = "^20.8b1"
isort = "^5.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | venv
)
'''

[tool.isort]
include_trailing_comma = true
line_length = 100
multi_line_output = 3
